# LRSCP

devel/: .catkin  .rosinstall  setup.sh
devel/lib/arm_dynamixel/: arm_dynamixel_node
devel/lib/arm_moveit_config/: move_group_interface
devel/lib/kinect2_bridge/: kinect2_bridge
devel/lib/kinect2_calibration/: kinect2_calibration
devel/lib/kinect2_viewer/: kinect2_viewer
devel/lib/pkgconfig/: arm_description.pc  arm_dynamixel.pc  arm_moveit_config.pc  kinect2_bridge.pc  kinect2_calibration.pc  kinect2_registration.pc  kinect2_viewer.pc  my_dynamixel_tutorial.pc  trac_ik_examples.pc  trac_ik_kinematics_plugin.pc  trac_ik_lib.pc
install/: .rosinstall
install/share/arm_description/: package.xml
src/arm_description/: manifest.xml
src/arm_description/launch/: gazebo.launch
src/arm_description/meshes/: ball.STL  base_link.STL  middle.STL  top.STL
src/arm_description/meshes_old/: bottom.STL
src/arm_description/robots/: arm_description.dae  (+2 more)
src/arm_dynamixel/: CMakeLists.txt  joints_trajectory_controller.yaml  tilt.yaml
src/arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_moveit_config/config/: arm_description.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml
src/arm_moveit_config/launch/: arm_description_moveit_controller_manager.launch.xml  demo.launch  demo_custom.launch  move_group.launch  move_group_interface.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
src/arm_moveit_config/src/: move_group_interface.cpp  remaining
src/new_config/: .setup_assistant
(+17 files in other folders)
